coldx design update

--- a/css/style.css
+++ b/css/style.css
@@ -79,11 +79,15 @@ body {
 
 @media (max-width: 640px) {
   .header__item {
-    font-size: 25px;
-  }
+    font-size: 20px;
+}
+.header__title {
+    font-size: 28px;
+}
 }
 @media (max-width: 457px) {
   .footer__text::before {
     display: none;
   }
+
 }
