--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
   font-family: "Montserrat", sans-serif;
   color: #ffffff;
   background: linear-gradient(180deg, #7f29a8 0%, #38007e 95.83%);
+  background-color: #3C1969;
 }
 
 .header {
