--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
   font-size: 30px;
 }
 .header__inner {
+  height: 90%;
   text-align: center;
   padding-top: 50px;
 }
@@ -48,7 +49,6 @@ body {
 .footer {
   text-align: center;
   font-weight: 700;
-  padding: 117px 0 0;
 }
 
 .footer li {
